<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvValor1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/valor_litro_combust_vel_1"
        app:layout_constraintBottom_toBottomOf="@+id/etValor1"
        app:layout_constraintStart_toStartOf="@+id/tvConsumo2"
        app:layout_constraintTop_toTopOf="@+id/etValor1" />

    <TextView
        android:id="@+id/tvValor2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/valor_litro_combust_vel_2"
        app:layout_constraintBottom_toBottomOf="@+id/etValor2"
        app:layout_constraintStart_toStartOf="@+id/tvValor1"
        app:layout_constraintTop_toTopOf="@+id/etValor2" />

    <EditText
        android:id="@+id/etValor1"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/ex_5_79"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="@+id/etConsumo2"
        app:layout_constraintTop_toBottomOf="@+id/etConsumo2" />

    <EditText
        android:id="@+id/etValor2"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/ex_5_79"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="@+id/etValor1"
        app:layout_constraintTop_toBottomOf="@+id/etValor1" />

    <Button
        android:id="@+id/btnBuscar2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buscar"
        app:layout_constraintBottom_toBottomOf="@+id/etConsumo2"
        app:layout_constraintStart_toStartOf="@+id/btnBuscar1"
        app:layout_constraintTop_toTopOf="@+id/etConsumo2" />

    <EditText
        android:id="@+id/etConsumo2"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/ex_10_5"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="@+id/etConsumo1"
        app:layout_constraintTop_toBottomOf="@+id/etConsumo1" />

    <TextView
        android:id="@+id/tvConsumo2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/consumo_combust_vel_2"
        app:layout_constraintBottom_toBottomOf="@+id/etConsumo2"
        app:layout_constraintStart_toStartOf="@+id/tvConsumo1"
        app:layout_constraintTop_toTopOf="@+id/etConsumo2" />

    <ImageView
        android:id="@+id/iconConsumo1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:importantForAccessibility="no"
        app:layout_constraintBottom_toBottomOf="@+id/tvConsumo1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvConsumo1"
        app:srcCompat="@drawable/gas_station" />


    <EditText
        android:id="@+id/etConsumo1"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/ex_10_5"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        app:layout_constraintStart_toEndOf="@+id/tvConsumo1"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvConsumo1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/consumo_combust_vel_1"
        app:layout_constraintBottom_toBottomOf="@+id/etConsumo1"
        app:layout_constraintStart_toEndOf="@+id/iconConsumo1"
        app:layout_constraintTop_toTopOf="@+id/etConsumo1" />

    <Button
        android:id="@+id/btnBuscar1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/buscar"
        app:layout_constraintBottom_toBottomOf="@+id/etConsumo1"
        app:layout_constraintStart_toEndOf="@+id/etConsumo1"
        app:layout_constraintTop_toTopOf="@+id/etConsumo1" />

    <ImageView
        android:id="@+id/iconConsumo2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:importantForAccessibility="no"
        app:layout_constraintBottom_toBottomOf="@+id/tvConsumo2"
        app:layout_constraintStart_toStartOf="@+id/iconConsumo1"
        app:layout_constraintTop_toTopOf="@+id/tvConsumo2"
        app:srcCompat="@drawable/gas_station" />

    <ImageView
        android:id="@+id/iconValor1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:importantForAccessibility="no"
        app:layout_constraintBottom_toBottomOf="@+id/tvValor1"
        app:layout_constraintStart_toStartOf="@+id/iconConsumo2"
        app:layout_constraintTop_toTopOf="@+id/tvValor1"
        app:srcCompat="@drawable/money" />

    <ImageView
        android:id="@+id/iconValor2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:importantForAccessibility="no"
        app:layout_constraintBottom_toBottomOf="@+id/tvValor2"
        app:layout_constraintStart_toStartOf="@+id/iconValor1"
        app:layout_constraintTop_toTopOf="@+id/tvValor2"
        app:srcCompat="@drawable/money" />

    <Button
        android:id="@+id/btnMaisBarato"
        android:layout_width="275dp"
        android:layout_height="51dp"
        android:layout_marginTop="16dp"
        android:text="@string/o_mais_barato"
        app:layout_constraintEnd_toEndOf="@+id/etValor2"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toStartOf="@+id/iconValor2"
        app:layout_constraintTop_toBottomOf="@+id/etValor2" />

</androidx.constraintlayout.widget.ConstraintLayout>
